--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Projects</a></li>
-							<li><a href="#two">Resume</a></li>
+							<li><a href="#one">Work</a></li>
+							<li><a href="#two">About me</a></li>
 							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
