--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">linweiyue@stu.pku.edu.cn</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>+86-18960110978</span>
 										</li>
 										
 										<!-- <li>
