--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Komorebi</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Somatosensory interactive devices that allow you to experience plant dyeing.</p>
 									<ul class="actions">
 										<li><a href="Komorebi.html" class="button">Learn more</a></li>
 									</ul>
@@ -131,7 +131,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>If you are interested in my work and research directions, please feel free to contact me.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -181,7 +181,7 @@
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li> -->
-										*/
+										
 									</ul>
 								</section>
 							</div>
