--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Komorebi</h2>
-									<p>Somatosensory interactive devices that allow you to experience plant dyeing.</p>
+									<p>Somatosensory interaction that allow you to experience plant dyeing.</p>
 									<ul class="actions">
 										<li><a href="Komorebi.html" class="button">Learn more</a></li>
 									</ul>
@@ -71,11 +71,23 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/chivalrous/1.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Trapped Chivalrous</h2>
+									<p>A Tabula game on revolving scenic lantern.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/chivalrous/1.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Trapped Chivalrous</h2>
+									<p>A Tabula game on revolving scenic lantern.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
