--- a/generic.html
+++ b/generic.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Landscape</a>
+				<a href="index.html" class="title">Weiyue Lin</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -32,8 +32,13 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">Landscape</h1>
 							<!-- <span class="image fit"><img src="images/pic04.jpg" alt="" /></span> -->
+							<div class="inner">
+								<h2>Award</h2>
+								<p>Here are some of my work, including interactive installations, video games, and mini-movies. </p>
+							
+						    </div>
 							<video width=100% autoplay="autoplay" controls="controls">
 								<source src="videos/water-video-0514.MP4" type="video/mp4">
 							</video>
