--- a/Komorebi.html
+++ b/Komorebi.html
@@ -17,6 +17,7 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="index.html" class="title">Komorebi</a>
+				<link rel="icon" href="images/moon.png" type ="images/moon.png">
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
