--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/Komorebi/1.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/Komorebi/1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Komorebi</h2>
