--- a/generic.html
+++ b/generic.html
@@ -17,7 +17,8 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Weiyue Lin</a>
+				<a href="index.html" class="title"><img src="images/yue2.png" alt="" width=35% /></a>
+
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -43,8 +44,10 @@
 							<video width=100% autoplay="autoplay" controls="controls">
 								<source src="videos/water-video-0514.MP4" type="video/mp4">
 							</video>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p></br>We take the a famous Chinese painting as the core context and design a context-based water-mediated interaction system Landscape Rippling. We project the painting on the water-mediated interface. Water used here is not only an interactive interface but also a component element of the environment. </br></p>
+							<span class="image fit"><img src="images/landscape/5.png" alt="" /></span>
+							<p> The initial painting image is dim and stale. The interactive approach here - pouring water to clean old painting. The retained water in the container together with the painting image is an echo of the river, and you could interact with the water and getting sensory feedback. And then, the cloud mask displayed on the interface obscures part of the painting, and you need to disperse the cloud by brushing water, triggering a detailed display. During the interaction, you will hear the murmur of water, the whistling of wind and the chirping of birds. </p>
+							<span class="image fit"><img src="images/landscape/4.png" alt="" /></span>
 						</div>
 					</section>
 
