--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
 								</div>
 							</div>
 						</section>
+						
+						<section>
+							<a href="#" class="image"><img src="images/museum/face.jpg" alt="" data-position="70% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Night at the Museum</h2>
+									<p>A virtual museum with custom games for artifacts</p>
+									<ul class="actions">
+										<li><a href="museum.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 						<section>
 							<a href="#" class="image"><img src="images/rescue/3.png" alt="" data-position="70% 25%" /></a>
 							<div class="content">
@@ -104,6 +117,7 @@
 								</div>
 							</div>
 						</section>
+
 						<section>
 							<a href="#" class="image"><img src="images/rescue/3.png" alt="" data-position="70% 25%" /></a>
 							<div class="content">
@@ -131,8 +145,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Landscape Rippling</h2>
-									<p>Context-based Water-mediated Interaction Design</p>
+									<h2>Context-based Water-mediated Interaction</h2>
+									<p>?</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -140,10 +154,22 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/Komorebi/1.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/AIAD/3.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Komorebi</h2>
+									<h2>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h2>
+									<p>A Tabula game on revolving scenic lantern.</p>
+									<ul class="actions">
+										<li><a href="AIAD.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/marionette/4.png" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2> A New Interactive Form of Ancient Marionette Control Techniques</h2>
 									<p>Somatosensory interaction that allow you to experience plant dyeing.</p>
 									<ul class="actions">
 										<li><a href="Komorebi.html" class="button">Learn more</a></li>
@@ -151,42 +177,7 @@
 								</div>
 							</div>
 						</section>
-						<section>
-							<a href="#" class="image"><img src="images/chivalrous/1.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Trapped Chivalrous</h2>
-									<p>A Tabula game on revolving scenic lantern.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/rescue/3.png" alt="" data-position="70% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Trapped Chivalrous</h2>
-									<p>A Tabula game on revolving scenic lantern.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/rescue/3.png" alt="" data-position="70% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Trapped Chivalrous</h2>
-									<p>A Tabula game on revolving scenic lantern.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
+						
 
 					</section>
 				<!--Two2---->
