--- a/AIAD.html
+++ b/AIAD.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Komorebi</title>
+		<title>AIAD</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Komorebi</a>
+				<a href="index.html" class="title">悦</a>
 				<link rel="icon" href="images/moon.png" type ="images/moon.png">
 				<nav>
 					<ul>
