--- a/museum.html
+++ b/museum.html
@@ -34,20 +34,16 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Landscape</h1>
+							<h1 class="major">Night at the Museum</h1>
 							<!-- <span class="image fit"><img src="images/pic04.jpg" alt="" /></span> -->
-							<div class="inner">
-								<h2>Award</h2>
-								<p>Here are some of my work, including interactive installations, video games, and mini-movies. </p>
 							
-						    </div>
 							<video width=100% autoplay="autoplay" controls="controls">
 								<source src="videos/museum.MP4" type="video/mp4">
 							</video>
-							<p></br>We take the a famous Chinese painting as the core context and design a context-based water-mediated interaction system Landscape Rippling. We project the painting on the water-mediated interface. Water used here is not only an interactive interface but also a component element of the environment. </br></p>
-							<span class="image fit"><img src="images/landscape/5.png" alt="" /></span>
-							<p> The initial painting image is dim and stale. The interactive approach here - pouring water to clean old painting. The retained water in the container together with the painting image is an echo of the river, and you could interact with the water and getting sensory feedback. And then, the cloud mask displayed on the interface obscures part of the painting, and you need to disperse the cloud by brushing water, triggering a detailed display. During the interaction, you will hear the murmur of water, the whistling of wind and the chirping of birds. </p>
-							<span class="image fit"><img src="images/landscape/4.png" alt="" /></span>
+							<p></br>Night at the Museum is a virtual simulation project integrating guided tour and game. The visitors will be placed in a virtual scene and will tour the museum through the direction rocker and interactive buttons arranged in the scene. Each cultural relic exhibit is equipped with interactive games and corresponding detailed introduction scenes. During the tour, visitors can have a detailed understanding of the exhibits they are interested in and play related games.</br></p>
+							<span class="image fit"><img src="images/museum/5.png" alt="" /></span>
+							<p> We want to explore a new form of online pavilion guidance that combines elegant interactive games with virtual simulation Tours. Through interesting games, visitors can be interested in the cultural relics. Meanwhile, detailed introduction of the exhibits can also give users a deeper understanding of the cultural relics and their historical origins.</p>
+							<span class="image fit"><img src="images/museum/6.png" alt="" /></span>
 						</div>
 					</section>
 
