--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome2</a></li>
+							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Research</a></li>
 							<li><a href="#two">Work</a></li>
 							<li><a href="#three">Contact</a></li>
