--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 						<div class="inner">
 							<h1>Hi, I'm Weiyue.</h1>
 							<p>It is so nice to meet you in such a big world. <br />
-							 <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<!--  <a href="http://html5up.net/license">Creative Commons</a>.-->
+							</p>
 							
 							<!-- <p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
 							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p> -->
