--- a/index.html
+++ b/index.html
@@ -57,20 +57,45 @@
 							<h2>Research</h2>
 							<p></p>
 						</div>
-
-						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+						<section><!--unfold and go-->
+							<a href="#" class="image"><img src="images/unfold/Figure1.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Context-based Water-mediated Interaction</h2>
-									<p>?</p>
+									<h2>"Unfold and Go Touch": A Portable Method for Making Existing Touchscreens Accessible to Blind and Low Vision People in Self-Service Terminals</h2>
+									<!--wesee<p>?</p>-->
 									<ul class="actions">
 										<li><a href="Landscape2.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
-						<section>
+
+						<section><!--wesee-->
+							<a href="#" class="image"><img src="images/wesee/wesee-2.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Digital Cultural Heritage Interpretation for Blind and Low Vision People</h2>
+									<ul class="actions">
+										<li><a href="Landscape2.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+
+						<section><!--landscape-->
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Context-based Water-mediated Interaction</h2>
+
+									<ul class="actions">
+										<li><a href="Landscape2.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+
+						<section><!--wesee-->
 							<a href="#" class="image"><img src="images/AIAD/3.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
