--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<h2>"Unfold and Go Touch": A Portable Method for Making Existing Touchscreens Accessible to Blind and Low Vision People in Self-Service Terminals</h2>
 									<!--wesee<p>?</p>-->
 									<ul class="actions">
-										<li><a href="Landscape2.html" class="button">Learn more</a></li>
+										<li><a href="unfold.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -76,7 +76,7 @@
 								<div class="inner">
 									<h2>Digital Cultural Heritage Interpretation for Blind and Low Vision People</h2>
 									<ul class="actions">
-										<li><a href="Landscape2.html" class="button">Learn more</a></li>
+										<li><a href="wesee.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
