--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<a href="#" class="image"><img src="images/unfold/Figure1.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>"Unfold and Go Touch": A Portable Method for Making Existing Touchscreens Accessible to Blind and Low Vision People in Self-Service Terminals</h2>
+									<h3>A Portable Method for Making Existing Touchscreens Accessible to Blind and Low Vision People in Self-Service Terminals</h3>
 									<!--wesee<p>?</p>-->
 									<ul class="actions">
 										<li><a href="unfold.html" class="button">Learn more</a></li>
@@ -74,7 +74,7 @@
 							<a href="#" class="image"><img src="images/wesee/wesee-2.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Digital Cultural Heritage Interpretation for Blind and Low Vision People</h2>
+									<h3>Digital Cultural Heritage Interpretation for Blind and Low Vision People</h3>
 									<ul class="actions">
 										<li><a href="wesee.html" class="button">Learn more</a></li>
 									</ul>
@@ -83,10 +83,10 @@
 						</section>
 
 						<section><!--landscape-->
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/evergreen/evergreen.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Context-based Water-mediated Interaction</h2>
+									<h3>A Mixed Reality Transformation for Experiencing Plant Dyeing</h3>
 
 									<ul class="actions">
 										<li><a href="Landscape2.html" class="button">Learn more</a></li>
@@ -95,24 +95,38 @@
 							</div>
 						</section>
 
-						<section><!--wesee-->
+						<section><!--landscape-->
+							<a href="#" class="image"><img src="images/landscape/mainpage.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h3>Context-based Water-mediated Interaction</h3>
+
+									<ul class="actions">
+										<li><a href="Landscape2.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+
+						<section>
 							<a href="#" class="image"><img src="images/AIAD/3.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h2>
-									<p>A Tabula game on revolving scenic lantern.</p>
+									<h3>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h3>
+
 									<ul class="actions">
 										<li><a href="AIAD.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
+
 						<section>
 							<a href="#" class="image"><img src="images/marionette/4.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2> A New Interactive Form of Ancient Marionette Control Techniques</h2>
-									<p>Somatosensory interaction that allow you to experience plant dyeing.</p>
+									<h3> A New Interactive Form of Ancient Marionette Control Techniques</h3>
+
 									<ul class="actions">
 										<li><a href="Marionette.html" class="button">Learn more</a></li>
 									</ul>
@@ -128,7 +142,7 @@
 				<!-- Two1 -->
 					<section id="two" class="wrapper style2 spotlights">
 						<div class="inner">
-							<h2>What we do</h2>
+							<h2>Work</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							
 						</div>
@@ -136,7 +150,7 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Landscape Rippling</h2>
+									<h3>Landscape Rippling</h3>
 									<p>Context-based Water-mediated Interaction Design</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -148,7 +162,7 @@
 							<a href="#" class="image"><img src="images/Komorebi/1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Komorebi</h2>
+									<h3>Komorebi</h3>
 									<p>Somatosensory interaction that allow you to experience plant dyeing.</p>
 									<ul class="actions">
 										<li><a href="Komorebi.html" class="button">Learn more</a></li>
@@ -160,7 +174,7 @@
 							<a href="#" class="image"><img src="images/chivalrous/1.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Trapped Chivalrous</h2>
+									<h3>Trapped Chivalrous</h3>
 									<p>A Tabula game on revolving scenic lantern.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -173,7 +187,7 @@
 							<a href="#" class="image"><img src="images/museum/face.jpg" alt="" data-position="70% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Night at the Museum</h2>
+									<h3>Night at the Museum</h3>
 									<p>A virtual museum with custom games for artifacts</p>
 									<ul class="actions">
 										<li><a href="museum.html" class="button">Learn more</a></li>
@@ -185,7 +199,7 @@
 							<a href="#" class="image"><img src="images/rescue/3.png" alt="" data-position="70% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Trapped Chivalrous</h2>
+									<h3>Trapped Chivalrous</h3>
 									<p>A Tabula game on revolving scenic lantern.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -198,7 +212,7 @@
 							<a href="#" class="image"><img src="images/rescue/3.png" alt="" data-position="70% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Trapped Chivalrous</h2>
+									<h3>Trapped Chivalrous</h3>
 									<p>A Tabula game on revolving scenic lantern.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
