--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 							<div class="content">
 								<div class="inner">
 									<h3>A Portable Method for Making Existing Touchscreens Accessible to Blind and Low Vision People in Self-Service Terminals</h3>
+									<p>CHI2023 Late Breaking Work</p>
 									<!--wesee<p>?</p>-->
 									<ul class="actions">
 										<li><a href="unfold.html" class="button">Learn more</a></li>
@@ -143,7 +144,7 @@
 					<section id="two" class="wrapper style2 spotlights">
 						<div class="inner">
 							<h2>Work</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Detail pages are coming soon!</p>
 							
 						</div>
 						<section>
