--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<section id="two" class="wrapper style2 spotlights">
 						<div class="inner">
 							<h2>Work</h2>
-							<p>Detail pages are coming soon!</p>
+							<p>Some of my digital artwork, including interactive installations, digital games, and short videos. Detail pages are coming soon!</p>
 							
 						</div>
 						<section>
@@ -154,7 +154,7 @@
 									<h3>Landscape Rippling</h3>
 									<p>Context-based Water-mediated Interaction Design</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
 								</div>
 							</div>
@@ -166,7 +166,7 @@
 									<h3>Komorebi</h3>
 									<p>Somatosensory interaction that allow you to experience plant dyeing.</p>
 									<ul class="actions">
-										<li><a href="Komorebi.html" class="button">Learn more</a></li>
+									<!-- 	<li><a href="Komorebi.html" class="button">Learn more</a></li> -->
 									</ul>
 								</div>
 							</div>
@@ -178,7 +178,7 @@
 									<h3>Trapped Chivalrous</h3>
 									<p>A Tabula game on revolving scenic lantern.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
 								</div>
 							</div>
@@ -191,7 +191,7 @@
 									<h3>Night at the Museum</h3>
 									<p>A virtual museum with custom games for artifacts</p>
 									<ul class="actions">
-										<li><a href="museum.html" class="button">Learn more</a></li>
+									<!-- 	<li><a href="museum.html" class="button">Learn more</a></li> -->
 									</ul>
 								</div>
 							</div>
@@ -203,8 +203,8 @@
 									<h3>Trapped Chivalrous</h3>
 									<p>A Tabula game on revolving scenic lantern.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+<!-- 										<li><a href="generic.html" class="button">Learn more</a></li>
+ -->									</ul>
 								</div>
 							</div>
 						</section>
@@ -216,7 +216,7 @@
 									<h3>Trapped Chivalrous</h3>
 									<p>A Tabula game on revolving scenic lantern.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+								<!-- 		<li><a href="generic.html" class="button">Learn more</a></li> -->
 									</ul>
 								</div>
 							</div>
