--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/AIAD/3.png" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/AIAD/mainpage.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h3>
@@ -123,7 +123,7 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/marionette/4.png" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/marionette/mainpage.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3> A New Interactive Form of Ancient Marionette Control Techniques</h3>
