--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 							<a href="#" class="image"><img src="images/Komorebi/1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h3>Komorebi</h3>
+									<h3>Evergreen</h3>
 									<p>Somatosensory interaction that allow you to experience plant dyeing.</p>
 									<ul class="actions">
 									<!-- 	<li><a href="Komorebi.html" class="button">Learn more</a></li> -->
