--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<p>CHI2023 Late Breaking Work</p>
 									<!--wesee<p>?</p>-->
 									<ul class="actions">
-										<li><a href="unfold.html" class="button">Learn more</a></li>
+									<!-- 	<li><a href="unfold.html" class="button">Learn more</a></li> -->
 									</ul>
 								</div>
 							</div>
@@ -76,32 +76,21 @@
 							<div class="content">
 								<div class="inner">
 									<h3>Digital Cultural Heritage Interpretation for Blind and Low Vision People</h3>
+									<p>CHI2023 Late Breaking Work</p>
 									<ul class="actions">
-										<li><a href="wesee.html" class="button">Learn more</a></li>
+										<!-- <li><a href="wesee.html" class="button">Learn more</a></li> -->
 									</ul>
 								</div>
 							</div>
 						</section>
 
-						<section><!--landscape-->
-							<a href="#" class="image"><img src="images/evergreen/evergreen.png" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h3>A Mixed Reality Transformation for Experiencing Plant Dyeing</h3>
-
-									<ul class="actions">
-										<li><a href="Landscape2.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
 
 						<section><!--landscape-->
 							<a href="#" class="image"><img src="images/landscape/mainpage.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>Context-based Water-mediated Interaction</h3>
-
+									<p>CAVW 2022</p>
 									<ul class="actions">
 										<li><a href="Landscape2.html" class="button">Learn more</a></li>
 									</ul>
@@ -109,18 +98,35 @@
 							</div>
 						</section>
 
+
+						<section><!--landscape-->
+							<a href="#" class="image"><img src="images/evergreen/evergreen.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h3>A Mixed Reality Transformation for Experiencing Plant Dyeing</h3>
+									<p>AHFE 2023</p>
+									<ul class="actions">
+										<li><a href="Landscape2.html" class="button">PDF</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+
+						
+
 						<section>
 							<a href="#" class="image"><img src="images/AIAD/mainpage.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h3>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h3>
-
+									<p>CGI 2020</p>
 									<ul class="actions">
-										<li><a href="AIAD.html" class="button">Learn more</a></li>
+										<li><a href="AIAD.html" class="button">PDF</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
+
 
 						<section>
 							<a href="#" class="image"><img src="images/marionette/mainpage.png" alt="" data-position="top center" /></a>
@@ -129,7 +135,7 @@
 									<h3> A New Interactive Form of Ancient Marionette Control Techniques</h3>
 
 									<ul class="actions">
-										<li><a href="Marionette.html" class="button">Learn more</a></li>
+					<!-- 					<li><a href="Marionette.html" class="button">Learn more</a></li> -->
 									</ul>
 								</div>
 							</div>
@@ -151,6 +157,32 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
+									<h3>Timmy's Dream</h3>
+									<p>An action RPG game.</p>
+									<ul class="actions">
+									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
+									</ul>
+								</div>
+							</div>
+						</section>
+
+						<section>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h3>Remmember Me</h3>
+									<p>Context-based Water-mediated Interaction Design</p>
+									<ul class="actions">
+									<!-- 	<li><a href="generic.html" class="button">Learn more</a></li> -->
+									</ul>
+								</div>
+							</div>
+						</section>
+
+						<section>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
 									<h3>Landscape Rippling</h3>
 									<p>Context-based Water-mediated Interaction Design</p>
 									<ul class="actions">
@@ -159,6 +191,7 @@
 								</div>
 							</div>
 						</section>
+
 						<section>
 							<a href="#" class="image"><img src="images/Komorebi/1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
