--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									<h3>Context-based Water-mediated Interaction</h3>
 									<p>CAVW 2022</p>
 									<ul class="actions">
-										<li><a href="Landscape2.html" class="button">Learn more</a></li>
+										<li><a href="Landscape2.html" class="button">PDF</a></li>
 									</ul>
 								</div>
 							</div>
