--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 							<div class="content">
 								<div class="inner">
 									<h3>A Portable Method for Making Existing Touchscreens Accessible to Blind and Low Vision People in Self-Service Terminals</h3>
-									<p>CHI2023 Late Breaking Work</p>
+									<p>CHI2023 LBW</p>
 									<!--wesee<p>?</p>-->
 									<ul class="actions">
-									<!-- 	<li><a href="unfold.html" class="button">Learn more</a></li> -->
+									<li><a href="https://dl.acm.org/doi/10.1145/3544549.3585819" class="button">View PDF</a></li>
 									</ul>
 								</div>
 							</div>
@@ -92,7 +92,7 @@
 									<h3>Context-based Water-mediated Interaction</h3>
 									<p>CAVW 2022</p>
 									<ul class="actions">
-										<li><a href="Landscape2.html" class="button">PDF</a></li>
+										<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064" class="button">View PDF</a></li>
 									</ul>
 								</div>
 							</div>
@@ -121,7 +121,7 @@
 									<h3>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h3>
 									<p>CGI 2020</p>
 									<ul class="actions">
-										<li><a href="AIAD.html" class="button">PDF</a></li>
+										<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14" class="button">View PDF</a></li>
 									</ul>
 								</div>
 							</div>
