--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<section id="one" class="wrapper style2 spotlights">
 						
 						<div class="inner">
-							<h2>Research</h2>
+							<h2>Publications</h2>
 							<!-- <p></p> -->
 						</div>
 						<section><!--unfold and go-->
@@ -89,7 +89,7 @@
 							<a href="#" class="image"><img src="images/wesee/wesee-2.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h3>Digital Cultural Heritage Interpretation for Blind and Low Vision People</h3>
+									<h3>Wesee: Digital Cultural Heritage Interpretation for Blind and Low Vision People</h3>
 									<p>CHI2023 Late Breaking Work</p>
 									<ul class="actions">
 										<!-- <li><a href="wesee.html" class="button">Learn more</a></li> -->
@@ -103,7 +103,7 @@
 							<a href="#" class="image"><img src="images/evergreen/evergreen.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h3>A Mixed Reality Transformation for Experiencing Plant Dyeing</h3>
+									<h3>Evergreen: A Mixed Reality Transformation for Experiencing Plant Dyeing</h3>
 									<p>AHFE 2023</p>
 									<ul class="actions">
 										<li><a href="Landscape2.html" class="button">PDF</a></li>
