--- a/index.html
+++ b/index.html
@@ -61,11 +61,17 @@
 							<a href="#" class="image"><img src="images/unfold/Figure1.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
+									<h3>CHI 2023 LBW</h3>
+									 <br>
+
 									<h3>A Portable Method for Making Existing Touchscreens Accessible to Blind and Low Vision People in Self-Service Terminals</h3>
-									<p>CHI2023 LBW</p>
-									<!--wesee<p>?</p>-->
+									
+									<p><b>Weiyue Lin</b>, Ting Li, Liu Liu, and Qian Zhu.<p>
+									<p><a href="https://dl.acm.org/doi/10.1145/3544549.3585819">View PDF</a><p>
+									<!--wesee<p>?</p>
 									<ul class="actions">
-									<li><a href="https://dl.acm.org/doi/10.1145/3544549.3585819" class="button">View PDF</a></li>
+									<li><a href="https://dl.acm.org/doi/10.1145/3544549.3585819" class="button">View PDF</a></li>-->
+
 									</ul>
 								</div>
 							</div>
@@ -75,10 +81,14 @@
 							<a href="#" class="image"><img src="images/landscape/mainpage.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h3>Context-based Water-mediated Interaction</h3>
-									<p>CAVW 2022</p>
-									<ul class="actions">
-										<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064" class="button">View PDF</a></li>
+									<h3>CAVW 2022</h3>
+									<br>
+									<h3>Landscape Rippling: Context-based Water-mediated Interaction</h3>
+									
+									<p><b>Weiyue Lin</b>, Haoran Hong, Yingying She, Baorong Yang. </p>
+									<p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064">View PDF</a><p>
+									<!--<ul class="actions">
+										<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064" class="button">View PDF</a></li>-->
 									</ul>
 								</div>
 							</div>
