--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Research</a></li>
+							<li><a href="#one">Publications</a></li>
 							<li><a href="#two">Work</a></li>
 							<li><a href="#three">Contact</a></li>
 						</ul>
@@ -87,8 +87,8 @@
 									
 									<p><b>Weiyue Lin</b>, Haoran Hong, Yingying She, Baorong Yang. </p>
 									<p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064">View PDF</a><p>
-									<!--<ul class="actions">
-										<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064" class="button">View PDF</a></li>-->
+									<ul class="actions">
+										<!--<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cav.2064" class="button">View PDF</a></li>-->
 									</ul>
 								</div>
 							</div>
@@ -99,6 +99,8 @@
 							<a href="#" class="image"><img src="images/wesee/wesee-2.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
+									<h3>Interact 2023</h3>
+									<br>
 									<h3>Wesee: Digital Cultural Heritage Interpretation for Blind and Low Vision People</h3>
 									<p>CHI2023 Late Breaking Work</p>
 									<ul class="actions">
@@ -113,10 +115,13 @@
 							<a href="#" class="image"><img src="images/evergreen/evergreen.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
+									<h3>AHFE 2023</h3>
+									<br>
 									<h3>Evergreen: A Mixed Reality Transformation for Experiencing Plant Dyeing</h3>
-									<p>AHFE 2023</p>
+									<p>Haoran Hong, <b>Weiyue Lin</b>, Genshen Li, Hiroki Kobayashi, Yingying She, Yiran Chen, Pintong Xiao, Yinan Fu, Jiayi Lei</p>
+									<p><a href="pdf/Hong_Haoran_91.pdf">View PDF</a><p>
 									<ul class="actions">
-										<li><a href="Landscape2.html" class="button">PDF</a></li>
+										<!--<li><a href="Landscape2.html" class="button">PDF</a></li>-->
 									</ul>
 								</div>
 							</div>
@@ -128,10 +133,12 @@
 							<a href="#" class="image"><img src="images/AIAD/mainpage.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
+									<h3>CGI 2020</h3>
 									<h3>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h3>
-									<p>CGI 2020</p>
-									<ul class="actions">
-										<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14" class="button">View PDF</a></li>
+									<p>Jiefeng Li, Yingying She, Lin Lin, Yalan Luo, Hao He, <b>Weiyue Lin</b> & Shengjing Hou. </p>
+									<p><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14">View PDF</a><p>
+									<!--<ul class="actions">
+										<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14" class="button">View PDF</a></li>-->
 									</ul>
 								</div>
 							</div>
