--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 							<div class="content">
 								<div class="inner">
 									<h3>CGI 2020</h3>
+									<br>
 									<h3>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h3>
 									<p>Jiefeng Li, Yingying She, Lin Lin, Yalan Luo, Hao He, <b>Weiyue Lin</b> & Shengjing Hou. </p>
 									<p><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14">View PDF</a><p>
@@ -276,7 +277,7 @@
 
 					</section>
 				<!--Two2---->
-					<section id=" " class="wrapper style3 fade-up">
+				<!-- 	<section id=" " class="wrapper style3 fade-up">
 
 						<div class="inner">
 							<h2>What we do</h2>
@@ -317,7 +318,7 @@
 								<li><a href="generic.html" class="button">Learn more</a></li>
 							</ul>
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
@@ -350,9 +351,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<span>No.5 Yiheyuan Road Haidian District, Beijing 100871 P.R. China.</span>
 										</li>
 										<li>
 											<h3>Email</h3>
