--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 									<h3>Interact 2023</h3>
 									<br>
 									<h3>Wesee: Digital Cultural Heritage Interpretation for Blind and Low Vision People</h3>
-									<p>CHI2023 Late Breaking Work</p>
+									<p>Yalan Luo, <b>Weiyue Lin</b>, </p>
+									<p><a href="pdf/Hong_Haoran_91.pdf">View PDF</a><p>
 									<ul class="actions">
 										<!-- <li><a href="wesee.html" class="button">Learn more</a></li> -->
 									</ul>
@@ -136,7 +137,7 @@
 									<h3>CGI 2020</h3>
 									<br>
 									<h3>An Approach of Short Advertising Video Generation Using Mobile Phone Assisted by Robotic Arm</h3>
-									<p>Jiefeng Li, Yingying She, Lin Lin, Yalan Luo, Hao He, <b>Weiyue Lin</b> & Shengjing Hou. </p>
+									<p>Jiefeng Li, Yingying She, Lin Lin, Yalan Luo, Hao He, <b>Weiyue Lin</b>, Shengjing Hou. </p>
 									<p><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14">View PDF</a><p>
 									<!--<ul class="actions">
 										<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-61864-3_14" class="button">View PDF</a></li>-->
